# sprintforecast

./: .gitignore  README.md  actuals.csv  capacity_hist.txt  demo.py  dist.json  pool.csv  pyproject.toml  release.sh  triads.csv
.github/ISSUE_TEMPLATE/: task.yaml
.github/workflows/: ci.yaml  status-label-sync.yaml
src/sprintforecast/: __init__.py  build_strategies.py  cli.py  dependency_fetcher.py  distributions.py  duration_extractor.py  forecast.py  label_durations.py  planner.py  real_engine.py  sprint.py  ticket.py  triad_fetcher.py
src/sprintforecast.egg-info/: SOURCES.txt  requires.txt
tests/: test_forecast.py  test_sprint.py
