[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprintforecast"
version = "0.1.8"
description = "Hierarchical Bayesian sprint forecasting and intake planning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "typer[all]>=0.12",
  "matplotlib>=3.8",
  "requests>=2.32"
]

[project.scripts]
sprintforecast = "sprintforecast.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
